test/test262/src/function-forms/error/async-func-expr-named.template
// Copyright (C) 2017 Leo Balter. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
path: language/expressions/async-function/named-
name: async function named expression
esid: sec-async-function-definitions
info: |
  14.6 Async Function Definitions

  AsyncFunctionExpression :
    async function BindingIdentifier ( FormalParameters ) { AsyncFunctionBody }
flags: [async]
---*/

var callCount = 0;
var f = async function f(/*{ params }*/) {
  /*{ body }*/
  callCount = callCount + 1;
}

f(/*{ args }*/)
  .then(_ => {
    throw new Test262Error('function should not be resolved');
  }, error => assert.sameValue(error.constructor, /*{ error }*/))
  .then(() => {
    assert.sameValue(callCount, 0, 'function body is not evaluated');
  }, $DONE)
  .then($DONE, $DONE);
